--- a/login.html
+++ b/login.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>KEDU</title>
+    <title></title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-
+    <div id="loginbox">
+      <div id="logo"></div>
+    </div>
   </body>
 </html>
