--- a/login.html
+++ b/login.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/login.css">
   </head>
   <body>
     <div id="loginbox">
       <div id="logo"></div>
+        <p id="welcometxt">Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.</p>
+        <div id="container">
+          <input type="text" placeholder="E-mail" name="uname" required>
+          <input type="password" placeholder="Password" name="psw" required>
+          <p id=""><a href="#">Glemt password?</a><a href="#">Ny Bruger</a></p>
+          <button type="submit" id="loginbtn">Login</button>
+        </div>
     </div>
   </body>
 </html>
