--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">'
     <title>KEDU</title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
@@ -15,15 +15,17 @@
 
 </div>
 <footer>
-<div class="flex">
-  <h2>Support</h2>
-  <p>Tekst tekst tekst</p>
-</div>
-<div class="flex">
-  <h2>Kontakt</h2>
-  <p>mere tekst tekst</p>
+  <div class="flex justify-center">
+    <div>
+      <h2>Support</h2>
+      <p>Tekst tekst tekst</p>
+    </div>
+    <div class="flytte">
+      <h2>Kontakt</h2>
+      <p>mere tekst tekst</p>
+    </div>
+  </div>
 
-</div>
 <div id="socialmedia">
 
   <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
@@ -32,7 +34,9 @@
   <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
 
 </div>
-
 </footer>
+
+
+
   </body>
 </html>
