Log ind side færdig

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>KEDU - Login</title>
     <link rel="stylesheet" href="assets/css/login.css">
   </head>
   <body>
@@ -10,10 +10,13 @@
       <div id="logo"></div>
         <p id="welcometxt">Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.</p>
         <div id="container">
-          <input type="text" placeholder="E-mail" name="uname" required>
-          <input type="password" placeholder="Password" name="psw" required>
-          <p id=""><a href="#">Glemt password?</a><a href="#">Ny Bruger</a></p>
-          <button type="submit" id="loginbtn">Login</button>
+          <input type="text" placeholder="E-mail" required>
+          <input type="password" placeholder="Password" required>
+          <div id="accountlinks">
+            <li><a href="#">Glemt password?</a></li>
+            <li><a href="#">Opret bruger</a></li>
+          </div>
+          <a href="index.html"><button id="loginbtn">Log ind</button></a>
         </div>
     </div>
   </body>
