--- a/index.html
+++ b/index.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">'
-    <title>KEDU</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-  </head>
-  <body>
-<header>
 
-</header>
-<div class="background">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">'
+  <title>KEDU</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
 
+<body>
+  <header>
+    <div class="header">
+
+    </div>
+  </header>
+
+  <div class="container">
+<div class="flex">
 </div>
-<footer>
-  <div class="flex justify-center">
-    <div>
-      <h2>Support</h2>
-      <p>Tekst tekst tekst</p>
-    </div>
-    <div class="flytte">
-      <h2>Kontakt</h2>
-      <p>mere tekst tekst</p>
-    </div>
+<div class="flex">
+</div>
+<div class="flex">
+</div>
+<div class="flex">
+</div>
+<div class="flex">
+</div>
+<div class="flex">
+</div>
   </div>
 
-<div id="socialmedia">
+  <footer>
+    <div class="flex justify-center">
+      <div>
+        <h2>Support</h2>
+        <p>Tekst tekst tekst</p>
+      </div>
+      <div class="flytte">
+        <h2>Kontakt</h2>
+        <p>mere tekst tekst</p>
+      </div>
+    </div>
 
-  <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
-  <a href="https://www.facebook.com/KUBORobot/" target="_blank" class="fa fa-facebook"></a>
-  <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
-  <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
+    <div id="socialmedia">
 
-</div>
-</footer>
+      <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.facebook.com/KUBORobot/" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
+
+    </div>
+  </footer>
 
 
 
-  </body>
+</body>
+
 </html>
