--- a/index.html
+++ b/index.html
@@ -4,31 +4,54 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">'
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
   <header>
+    <img src="" alt="">
+    <nav>
+      <ul>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="xx.html">Forum</a></li>
+        <li><a href="xx.html">Materialer</a></li>
+        <li><a href="xx.html">Opgaver</a></li>
+        <li><a href="xx.html">Min profil</a></li>
+        <li><a href="xx.html">Søg</a></li>
+      </ul>
+    </nav>
     <div class="header">
 
     </div>
   </header>
 
   <div class="container">
-<div class="flex">
-</div>
-<div class="flex">
-</div>
-<div class="flex">
-</div>
-<div class="flex">
-</div>
-<div class="flex">
-</div>
-<div class="flex">
-</div>
+    <div class="boks">
+      <h1>tekstboks 1 </h1>
+    </div>
+
+    <div class="boks">
+      <h1>tekstboks 2</h1>
+    </div>
+
+    <div class="boks">
+      <h1>tekstboks 3</h1>
+    </div>
+
+    <div class="boks">
+      <h1>tekstboks 4</h1>
+    </div>
+
+    <div class="boks">
+      <h1>tekstboks 5</h1>
+    </div>
+
+    <div class="boks">
+      <h1>tekstboks 6</h1>
+    </div>
+
   </div>
 
   <footer>
