--- a/index.html
+++ b/index.html
@@ -10,49 +10,59 @@
 </head>
 
 <body>
-  <header>
-    <img src="" alt="">
-    <nav>
-      <ul>
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="xx.html">Forum</a></li>
-        <li><a href="xx.html">Materialer</a></li>
-        <li><a href="xx.html">Opgaver</a></li>
-        <li><a href="xx.html">Min profil</a></li>
-        <li><a href="xx.html">Søg</a></li>
-      </ul>
-    </nav>
-    <div class="header">
+  <div class="logo_container">
+    <img src="assets/images/kedu_logo.png" class="logo" alt="">
+  </div>
 
-    </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Forside</a></li>
+      <li><a href="xx.html">Forum</a></li>
+      <li><a href="xx.html">Materialer</a></li>
+      <li><a href="xx.html">Opgaver</a></li>
+      <li><a href="xx.html">Min profil</a></li>
+      <li><a href="xx.html">Søg</a></li>
+    </ul>
+  </nav>
+  <div class="header">
+  </div>
+
+  <header>
+
+
+
   </header>
 
   <div class="container">
-    <div class="boks">
-      <h1>tekstboks 1 </h1>
-    </div>
+    <div class="section_container">
 
-    <div class="boks">
-      <h1>tekstboks 2</h1>
-    </div>
+      <div class="boks">
+        <img src="assets/images/mandjakke.jpg" alt="">
+        <h2>Lars Hansen</h2>
+      </div>
 
-    <div class="boks">
-      <h1>tekstboks 3</h1>
-    </div>
+      <div class="boks justify-boks">
+        <h1>tekstboks 2</h1>
+      </div>
 
-    <div class="boks">
-      <h1>tekstboks 4</h1>
-    </div>
+      <div class="boks">
+        <h1>tekstboks 3</h1>
+      </div>
 
-    <div class="boks">
-      <h1>tekstboks 5</h1>
-    </div>
+      <div class="boks justify-boks">
+        <h1>tekstboks 4</h1>
+      </div>
 
-    <div class="boks">
-      <h1>tekstboks 6</h1>
-    </div>
+      <div class="boks">
+        <h1>tekstboks 5</h1>
+      </div>
 
+      <div class="boks justify-boks">
+        <h1>tekstboks 6</h1>
+      </div>
+    </div>
   </div>
+
 
   <footer>
     <div class="flex justify-center">
