ændringer siden i går

--- a/index.html
+++ b/index.html
@@ -37,28 +37,51 @@
     <div class="section_container">
 
       <div class="boks">
-        <img src="assets/images/mandjakke.jpg" alt="">
+        <img src="assets/images/mand1.jpg" alt="mand1" class="tilpas">
         <h2>Lars Hansen</h2>
+        <p class="overskrift">Er der en der kan hjælpe?</p>
+        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
-        <h1>tekstboks 2</h1>
+        <img src="assets/images/person1.jpg" alt="mand1" class="tilpas">
+        <h2>Anne Andersen</h2>
+        <p class="overskrift">Er der en der kan hjælpe?</p>
+        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks">
-        <h1>tekstboks 3</h1>
+        <img src="assets/images/person2.jpg" alt="mand1" class="tilpas">
+        <h2>Anette Schmidt</h2>
+        <p class="overskrift">Er der en der kan hjælpe?</p>
+        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
-        <h1>tekstboks 4</h1>
+        <img src="assets/images/person3.jpg" alt="mand1" class="tilpas">
+        <h2>Emil Olufsen</h2>
+        <p class="overskrift">Hvordan gør jeg bedst?</p>
+        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks">
-        <h1>tekstboks 5</h1>
+        <img src="assets/images/person4.jpg" alt="mand1" class="tilpas">
+        <h2>Kathrine Mauritsen</h2>
+        <p class="overskrift">Er der en der kan hjælpe?</p>
+        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
-        <h1>tekstboks 6</h1>
+        <img src="assets/images/person5.jpg" alt="mand1" class="tilpas">
+        <h2>Lone Iversen</h2>
+        <p class="overskrift">God inspiration til matematik i 2?</p>
+        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="comment">Kommenter</p>
       </div>
     </div>
   </div>
