--- a/index.html
+++ b/index.html
@@ -13,22 +13,37 @@
   <div class="logo_container">
     <img src="assets/images/kedu_logo.png" class="logo" alt="">
   </div>
+  <div class="inner">
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Forside</a></li>
-      <li><a href="xx.html">Forum</a></li>
-      <li><a href="xx.html">Materialer</a></li>
-      <li><a href="xx.html">Opgaver</a></li>
-      <li><a href="xx.html">Min profil</a></li>
-      <li><a href="xx.html">Søg</a></li>
-    </ul>
-  </nav>
-  <div class="header">
+    <nav>
+      <ul>
+        <li class="active"><a href="index.html">Forside</a></li>
+        <li><a href="forum.html">Forum</a></li>
+        <li><a href="materialer.html">Materialer</a></li>
+        <li><a href="opgaver.html">Opgaver</a></li>
+        <li><a href="minprofil.html">Min profil</a></li>
+        <li><a href="xx.html">Søg</a></li>
+      </ul>
+    </nav>
   </div>
-
   <header>
+    <div class="header">
+      <div class="kasse">
+    <img class="headerpicture"src="assets/images/person6.jpg" alt="person">
+    <div class="kasse1">
 
+    </div>
+    </div>
+
+    </div>
+
+
+
+
+
+
+
+    </div>
 
 
   </header>
@@ -54,14 +69,14 @@
 
       <div class="boks">
         <img src="assets/images/person2.jpg" alt="mand1" class="tilpas">
-        <h2>Anette Schmidt</h2>
+        <h2>Mathias Schmidt</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
         <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
-        <img src="assets/images/person3.jpg" alt="mand1" class="tilpas">
+        <img src="assets/images/person4.jpg" alt="mand1" class="tilpas">
         <h2>Emil Olufsen</h2>
         <p class="overskrift">Hvordan gør jeg bedst?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
@@ -69,7 +84,7 @@
       </div>
 
       <div class="boks">
-        <img src="assets/images/person4.jpg" alt="mand1" class="tilpas">
+        <img src="assets/images/person3.jpg" alt="mand1" class="tilpas">
         <h2>Kathrine Mauritsen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
@@ -78,15 +93,13 @@
 
       <div class="boks justify-boks">
         <img src="assets/images/person5.jpg" alt="mand1" class="tilpas">
-        <h2>Lone Iversen</h2>
+        <h2>Olav Iversen</h2>
         <p class="overskrift">God inspiration til matematik i 2?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
         <p class="comment">Kommenter</p>
       </div>
     </div>
   </div>
-
-
   <footer>
     <div class="flex justify-center">
       <div>
@@ -108,9 +121,6 @@
 
     </div>
   </footer>
-
-
-
 </body>
 
 </html>
