--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
     </nav>
   </div>
   <header>
-    <div class="header">
-      <div class="kasse">
-    <img class="headerpicture"src="assets/images/person6.jpg" alt="person">
-    <div class="kasse1">
+    <div id="header">
+      <div class="image_section1">
+        <img class="headerpicture" src="assets/images/person6.jpg" alt="billede1">
+        <div class="kasse1">
+        </div>
+      </div>
 
+      <div class="image_section1">
+        <img class="headerpicture" src="assets/images/person6.jpg" alt="billede2">
+        <div class="kasse1">
+        </div>
+      </div>
+
+      <div class="image_section1">
+        <img class="headerpicture" src="assets/images/person6.jpg" alt="billede3">
+        <div class="kasse1">
+        </div>
+      </div>
     </div>
-    </div>
-
-    </div>
-
-
-
-
-
-
-
-    </div>
-
-
   </header>
 
   <div class="container">
