--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
       <div class="image_section1">
         <img class="headerpicture" src="assets/images/person6.jpg" alt="billede1">
         <div class="kasse1">
+          <h2>Her kan der stå tekst</h2>
         </div>
       </div>
 
       <div class="image_section1">
         <img class="headerpicture" src="assets/images/person6.jpg" alt="billede2">
         <div class="kasse1">
+          <h2>Mere tekst</h2>
         </div>
       </div>
 
       <div class="image_section1">
         <img class="headerpicture" src="assets/images/person6.jpg" alt="billede3">
         <div class="kasse1">
+          <h2>Teeekst er sjovt</h2>
         </div>
       </div>
     </div>
