--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </div>
   <header>
-    <div id="header">
+    <div id="header_section">
       <div class="image_section1">
         <img class="headerpicture" src="assets/images/person6.jpg" alt="billede1">
         <div class="kasse1">
