--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
     <div class="section_container">
 
       <div class="boks">
-        <img src="assets/images/mand1.jpg" alt="mand1" class="tilpas">
-        <h2>Lars Hansen</h2>
+        <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
+        <h2>Johanne Hansen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
         <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
-        <img src="assets/images/person1.jpg" alt="mand1" class="tilpas">
-        <h2>Anne Andersen</h2>
+        <img src="assets/images/mand1.png" alt="mand1" class="tilpas">
+        <h2>Lars Andersen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
         <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks">
-        <img src="assets/images/person2.jpg" alt="mand1" class="tilpas">
+        <img src="assets/images/mand2.png" alt="mand1" class="tilpas">
         <h2>Mathias Schmidt</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="boks justify-boks">
-        <img src="assets/images/person4.jpg" alt="mand1" class="tilpas">
+        <img src="assets/images/unknown.png" alt="mand1" class="tilpas">
         <h2>Emil Olufsen</h2>
         <p class="overskrift">Hvordan gør jeg bedst?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
@@ -87,7 +87,7 @@
       </div>
 
       <div class="boks">
-        <img src="assets/images/person3.jpg" alt="mand1" class="tilpas">
+        <img src="assets/images/dame2.png" alt="mand1" class="tilpas">
         <h2>Kathrine Mauritsen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
@@ -95,7 +95,7 @@
       </div>
 
       <div class="boks justify-boks">
-        <img src="assets/images/person5.jpg" alt="mand1" class="tilpas">
+        <img src="assets/images/mand3.png" alt="mand1" class="tilpas">
         <h2>Olav Iversen</h2>
         <p class="overskrift">God inspiration til matematik i 2?</p>
         <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
