--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <div class="logo_container">
     <img src="assets/images/kedu_logo.png" class="logo" alt="">
   </div>
-  <div class="inner">
 
     <nav>
       <ul>
@@ -25,9 +24,9 @@
         <li><a href="xx.html">Søg</a></li>
       </ul>
     </nav>
-  </div>
+
   <header>
-    <div id="header_section">
+    <div id="header_container">
       <div class="image_section1">
         <img class="headerpicture" src="assets/images/person6.jpg" alt="billede1">
         <div class="kasse1">
@@ -51,7 +50,7 @@
     </div>
   </header>
 
-  <div class="container">
+  <div id="container">
     <div class="section_container">
 
       <div class="boks">
