--- a/materialer.html
+++ b/materialer.html
@@ -24,6 +24,7 @@
   <div class="header">
   </div>
   <div id="content-wrapper">
+    <div id="content">
     <div id="box-left">
       <div class="box-title">
       </div>
@@ -61,3 +62,4 @@
       </div>
     </div>
   </div>
+</div>
