--- a/index.html
+++ b/index.html
@@ -57,31 +57,31 @@
         <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
         <h2>Johanne Hansen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
-        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="beskrivelse">Jeg har virkelig svært ved at få mine elever til at  <br> lærer endelser. Er der en der har en god opgave de kan anbefale? Jeg er åben for de meste.... <br></p>
         <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
         <img src="assets/images/mand1.png" alt="mand1" class="tilpas">
         <h2>Lars Andersen</h2>
-        <p class="overskrift">Er der en der kan hjælpe?</p>
-        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="overskrift">Erfaring med kodning?</p>
+        <p class="beskrivelse">Jeg skal lave et forløb med mine elever omking kodning. Jeg har aldrig undervist <br>i det før, så jeg ville blive rigtig glad hvis... <br> </p>
         <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks">
         <img src="assets/images/mand2.png" alt="mand1" class="tilpas">
         <h2>Mathias Schmidt</h2>
-        <p class="overskrift">Er der en der kan hjælpe?</p>
-        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="overskrift">SE HER!</p>
+        <p class="beskrivelse">Jeg har igår lavet denne opgave med mine elever. <br> Det fungerede rigtitg godt, og derfor vil jeg gerne dele den med jer.  <br></p>
         <p class="comment">Kommenter</p>
       </div>
 
       <div class="boks justify-boks">
         <img src="assets/images/unknown.png" alt="mand1" class="tilpas">
         <h2>Emil Olufsen</h2>
-        <p class="overskrift">Hvordan gør jeg bedst?</p>
-        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="overskrift">Er jeg helt galt på den?</p>
+        <p class="beskrivelse">En kolega og jeg, diskutere hvorvidt der er rigtig eller forkert at bruge sådan en opgave som<br> denne? Jeg mener ikke den er relevant...<br></p>
         <p class="comment">Kommenter</p>
       </div>
 
@@ -96,8 +96,8 @@
       <div class="boks justify-boks">
         <img src="assets/images/mand3.png" alt="mand1" class="tilpas">
         <h2>Olav Iversen</h2>
-        <p class="overskrift">God inspiration til matematik i 2?</p>
-        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="overskrift">God inspiration til matematik i 2. klasse?</p>
+        <p class="beskrivelse">Jeg er normalt sproglærer. Men jeg skal være vikar i matematik imorgen. og jeg har ingen ide om.. <br><br></p>
         <p class="comment">Kommenter</p>
       </div>
     </div>
