--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       <div class="boks">
         <img src="assets/images/dame2.png" alt="mand1" class="tilpas">
         <h2>Kathrine Mauritsen</h2>
-        <p class="overskrift">Er der en der kan hjælpe?</p>
-        <p class="beskrivelse">Her skal der stå en masse fyldetekst <br> som jeg ikke ved hvad er endnu <br> og lidt mere så det fylder.... </p>
+        <p class="overskrift">Kursus i tyskland?</p>
+        <p class="beskrivelse">Er der nogen her inde der har erfaring med at tage på kursus i tyskland?<br> <br></p>
         <p class="comment">Kommenter</p>
       </div>
 
