--- a/index.html
+++ b/index.html
@@ -30,21 +30,29 @@
       <div class="image_section1">
       <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
         <div class="kasse1">
-          <h2>Her kan der stå tekst</h2>
+          <p>
+            Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
+            Det giver dig masser af tid til det, der virkelig betyder noget – din undervisning. Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
+          </p>
         </div>
       </div>
 
       <div class="image_section1">
       <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
         <div class="kasse1">
-          <h2>Mere tekst</h2>
+          <p>
+            Lorem ipsum dolor sit amet, case tibique per in. An cum labitur neglegentur. At primis salutandi qui, duo ne esse movet. In sale ferri virtute his, an vocibus percipit eum.
+            Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
+          </p>
         </div>
       </div>
 
       <div class="image_section1">
       <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
         <div class="kasse1">
-          <h2>Teeekst er sjovt</h2>
+          <p>
+            Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu. Ei indoctum reformidans mea. Errem iuvaret voluptaria mea in, ea ferri placerat intellegebat mei, possit luptatum duo no. Ad nec nonumy scripta menandri. Primis signiferumque conclusionemque ea has, ipsum impetus cum id, vim saepe quaestio ex.
+          </p>
         </div>
       </div>
     </div>
