--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
     </nav>
 
   <header>
+    <div id="nav_undersidebar"></div>
     <div id="header_container">
-      <div class="image_section1">
-      <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
-        <div class="kasse1">
-          <p>
-            Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
-            Det giver dig masser af tid til det, der virkelig betyder noget – din undervisning. Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
-          </p>
-        </div>
+        <div class="image_section1">
+        <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
+          <div class="kasse1">
+            <p>
+              Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
+              Det giver dig masser af tid til det, der virkelig betyder noget – din undervisning. Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
+            </p>
+          </div>
       </div>
 
       <div class="image_section1">
