Start på undersider og oprydning i kode

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <li><a href="xx.html">Søg</a></li>
       </ul>
     </nav>
-
-  <header>
     <div id="nav_undersidebar"></div>
+  <header id="header-forside">
     <div id="header_container">
         <div class="image_section1">
         <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
@@ -57,8 +56,7 @@
         </div>
       </div>
     </div>
-  </header>
-
+      </header>
   <div id="container">
     <div class="section_container">
 
@@ -122,14 +120,11 @@
         <p>mere tekst tekst</p>
       </div>
     </div>
-
     <div id="socialmedia">
-
       <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
       <a href="https://www.facebook.com/KUBORobot/" target="_blank" class="fa fa-facebook"></a>
       <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
       <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
-
     </div>
   </footer>
 </body>
