--- a/materialer.html
+++ b/materialer.html
@@ -4,62 +4,79 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>KEDU</title>
+  <title>Materialer - KEDU</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <div class="logo_container">
     <img src="assets/images/kedu_logo.png" class="logo" alt="">
   </div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Forside</a></li>
-      <li><a href="forum.html">Forum</a></li>
-      <li class="active"><a href="materialer.html">Materialer</a></li>
-      <li><a href="opgaver.html">Opgaver</a></li>
-      <li><a href="minprofil.html">Min profil</a></li>
-      <li><a href="xx.html">Søg</a></li>
-    </ul>
-  </nav>
-  <div class="header">
+    <nav>
+      <ul>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="forum.html">Forum</a></li>
+        <li class="active"><a href="materialer.html">Materialer</a></li>
+        <li><a href="opgaver.html">Opgaver</a></li>
+        <li><a href="minprofil.html">Min profil</a></li>
+        <li><a href="xx.html">Søg</a></li>
+      </ul>
+    </nav>
+      <div id="nav_undersidebar"></div>
+    <header id="header-materialer">
+      <div id="header_container">
+        <div id="header-cover">
+          <h1 id="page-title">
+            Materialer
+          </h1>
+        </div>
+    </header>
+    <div id="wrapper">
+    <aside id="aside-kurser">
+      <div class="title">
+        Kurser
+      </div>
+      <div class="kursus">
+      </div>
+      <div class="kursus">
+      </div>
+      <div class="kursus">
+      </div>
+      <div class="kursus">
+      </div>
+      <div class="kursus">
+      </div>
+    </aside>
+    <div id="col-2">
+      <div class="title">
+        Lektionsplaner
+      </div>
+      <section id="section-lektionsplaner">
+      <div class="lektionsplan">
+      </div>
+      <div class="lektionsplan">
+      </div>
+      <div class="lektionsplan">
+      </div>
+      <div class="lektionsplan">
+      </div>
+      <div class="lektionsplan">
+      </div>
+      </section>
+      <section id="content">
+      <section id="section_aarsplaner">
+        <div class="title">
+          Årsplaner
+        </div>
+        hej
+    </section>
+      <section id="emnedage">
+        <div class="title">
+          Emnedage
+        </div>
+        Emnedage
+      </section>
+    </section>
+    </div>
   </div>
-  <div id="content-wrapper">
-    <div id="content">
-    <div id="box-left">
-      <div class="box-title">
-      </div>
-      <div class="img-container">
-      </div>
-      <div class="description">
-      </div>
-      <div class="img-container">
-      </div>
-      <div class="description">
-      </div>
-      <div class="img-container">
-      </div>
-      <div class="description">
-      </div>
-    </div>
-    <div id="box-main">
-      <div class="box-title">
-      </div>
-      <div class="plan-container">
-      </div>
-      <div class="plan-container">
-      </div>
-      <div class="plan-container">
-      </div>
-      <div class="plan-container">
-      </div>
-    </div>
-    <div id="main_boxleft">
-      <div class="box-title">
-      </div>
-    </div>
-    <div id="main_boxright">
-      <div class="box-title">
-      </div>
-    </div>
-  </div>
-</div>
+  </body>
+  </html>
