--- a/opgaver.html
+++ b/opgaver.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Opgaver - KEDU</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+  <div class="logo_container">
+    <img src="assets/images/kedu_logo.png" class="logo" alt="">
+  </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="forum.html">Forum</a></li>
+        <li><a href="materialer.html">Materialer</a></li>
+        <li class="active"><a href="opgaver.html">Opgaver</a></li>
+        <li><a href="minprofil.html">Min profil</a></li>
+        <li><a href="xx.html">Søg</a></li>
+      </ul>
+    </nav>
+      <div id="nav_undersidebar"></div>
+    <header id="header-opgaver">
+      <div id="header_container">
+        <div id="header-cover">
+          <h1 id="page-title">
+            Opgaver
+          </h1>
+        </div>
+    </header>
   </body>
 </html>
