--- a/materialer.html
+++ b/materialer.html
@@ -32,9 +32,9 @@
     </header>
     <div id="wrapper">
     <aside id="aside-kurser">
-      <div class="title">
+      <h1 class="box-title">
         Kurser
-      </div>
+      </h1>
       <div class="kursus">
       </div>
       <div class="kursus">
@@ -47,9 +47,9 @@
       </div>
     </aside>
     <div id="col-2">
-      <div class="title">
+      <h1 class="box-title">
         Lektionsplaner
-      </div>
+      </h1>
       <section id="section-lektionsplaner">
       <div class="lektionsplan">
       </div>
@@ -64,15 +64,15 @@
       </section>
       <section id="content">
       <section id="section_aarsplaner">
-        <div class="title">
+        <h1 class="box-title">
           Årsplaner
-        </div>
+        </h1>
         hej
     </section>
       <section id="emnedage">
-        <div class="title">
+        <h1 class="box-title">
           Emnedage
-        </div>
+        </h1>
         Emnedage
       </section>
     </section>
