--- a/forum.html
+++ b/forum.html
@@ -31,5 +31,20 @@
           </h1>
         </div>
     </header>
+     <div id="wrapper">
+       <div class="col-1">
+         <div class="forum-container">
+           hej
+         </div>
+         <div class="forum-container">
+         </div>
+       </div>
+       <div class="col-2">
+         <div class="forum-container">
+         </div>
+         <div class="forum-container">
+         </div>
+       </div>
+     </div>
   </body>
 </html>
