--- a/minprofil.html
+++ b/minprofil.html
@@ -31,5 +31,127 @@
           </h1>
         </div>
     </header>
+    <div id="wrapper">
+    <aside id="aside-kurser">
+      <h1 class="box-title">
+        Kurser
+      </h1>
+      <div class="kursus">
+        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <p class="kursus-beskrivelse">
+          Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
+        </p>
+      </div>
+      <div class="kursus">
+        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <p class="kursus-beskrivelse">
+          Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
+        </p>
+      </div>
+      <div class="kursus">
+        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <p class="kursus-beskrivelse">
+          Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
+        </p>
+      </div>
+      <div class="kursus">
+        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <p class="kursus-beskrivelse">
+          Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
+        </p>
+      </div>
+      <div class="kursus">
+        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <p class="kursus-beskrivelse">
+          Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
+        </p>
+      </div>
+    </aside>
+    <div id="col-2">
+      <h1 class="box-title">
+        Lektionsplaner
+      </h1>
+      <section id="section-lektionsplaner">
+      <div class="lektionsplan">
+        <img src="assets/images/lektionsplaner/001.jpg" class="lektionsplan-billede">
+        <p class="lektionsplan-beskrivelse">
+          Hej hej hej.
+        </p>
+      </div>
+      <div class="lektionsplan">
+        <img src="assets/images/lektionsplaner/002.jpg" class="lektionsplan-billede">
+        <p class="lektionsplan-beskrivelse">
+          Hej hej hej.
+        </p>
+      </div>
+      <div class="lektionsplan">
+        <img src="assets/images/lektionsplaner/003.jpg" class="lektionsplan-billede">
+        <p class="lektionsplan-beskrivelse">
+          Hej hej hej.
+        </p>
+      </div>
+      <div class="lektionsplan">
+        <img src="assets/images/lektionsplaner/004.jpg" class="lektionsplan-billede">
+        <p class="lektionsplan-beskrivelse">
+          Hej hej hej.
+        </p>
+      </div>
+      <div class="lektionsplan">
+        <img src="assets/images/lektionsplaner/005.jpg" class="lektionsplan-billede">
+        <p class="lektionsplan-beskrivelse">
+          Hej hej hej.
+        </p>
+      </div>
+      </section>
+      <section id="content">
+      <section id="section_aarsplaner">
+        <h1 class="box-title">
+          Årsplaner
+        </h1>
+        <p class="aarsplaner-beskrivelse1">
+          Dansk<br />
+          Engelsk<br />
+          Kodning<br />
+          Samfundsfag<br />
+          Tysk<br />
+          Fysik<br />
+          Matematik
+        </p>
+        <p class="aarsplaner-beskrivelse2">
+          Dansk<br />
+          Engelsk<br />
+          Kodning<br />
+          Samfundsfag<br />
+          Tysk<br />
+          Fysik<br />
+          Matematik
+        </p>
+    </section>
+      <section id="emnedage">
+        <h1 class="box-title">
+          Emnedage
+        </h1>
+        <p class="aarsplaner-beskrivelse2">
+          Dansk<br />
+          Engelsk<br />
+          Kodning<br />
+          Samfundsfag<br />
+          Tysk<br />
+          Fysik<br />
+          Matematik
+        </p>
+        <p class="aarsplaner-beskrivelse2">
+          Dansk<br />
+          Engelsk<br />
+          Kodning<br />
+          Samfundsfag<br />
+          Tysk<br />
+          Fysik<br />
+          Matematik
+        </p>
+      </section>
+    </section>
+    </div>
+  </div>
   </body>
 </html>
