--- a/materialer.html
+++ b/materialer.html
@@ -32,7 +32,7 @@
     </header>
     <div id="wrapper">
     <aside id="aside-kurser">
-      <h1 class="box-title">
+      <h1 class="boks-titel">
         Kurser
       </h1>
       <div class="kursus">
@@ -67,7 +67,7 @@
       </div>
     </aside>
     <div id="col-2">
-      <h1 class="box-title">
+      <h1 class="boks-titel">
         Lektionsplaner
       </h1>
       <section id="section-lektionsplaner">
@@ -104,10 +104,10 @@
       </section>
       <section id="content">
       <section id="section_aarsplaner">
-        <h1 class="box-title">
+        <h1 class="boks-titel">
           Årsplaner
         </h1>
-        <p class="aarsplaner-beskrivelse1">
+        <p class="boks-beskrivelse_left">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
@@ -116,7 +116,7 @@
           Fysik<br />
           Matematik
         </p>
-        <p class="aarsplaner-beskrivelse2">
+        <p class="boks-beskrivelse_right">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
@@ -126,11 +126,11 @@
           Matematik
         </p>
     </section>
-      <section id="emnedage">
-        <h1 class="box-title">
+      <section id="section_emnedage">
+        <h1 class="boks-titel">
           Emnedage
         </h1>
-        <p class="aarsplaner-beskrivelse2">
+        <p class="boks-beskrivelse_left">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
@@ -139,7 +139,7 @@
           Fysik<br />
           Matematik
         </p>
-        <p class="aarsplaner-beskrivelse2">
+        <p class="boks-beskrivelse_right">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
