Kodning af forum tråd

--- a/forum-dansk.html
+++ b/forum-dansk.html
@@ -34,24 +34,62 @@
         </header>
         <div id="wrapper-forum">
           <div id="emne-container">
-            <h1 class="boks-titel">
-              Dansk
-            </h1>
-            <div class="traad-container">
-              <h1 class="traad-titel">
-                hej
+              <h1 class="boks-titel">
+                Dansk
               </h1>
+            <div class="traad-container">
+              <a href="forum-traad.html">
+                <h1 class="traad-titel">
+                  Morbi pharetra sit amet diam nec gravida
+                </h1>
+              </a>
+              <p class="forum-beskrivelse">
+                Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+              </p>
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                hej
+                Morbi pharetra sit amet diam nec gravida
               </h1>
+              <p class="forum-beskrivelse">
+                Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+              </p>
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                hej
+                Morbi pharetra sit amet diam nec gravida
               </h1>
+              <p class="forum-beskrivelse">
+                Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+              </p>
             </div>
+            <div class="traad-container">
+              <h1 class="traad-titel">
+                Morbi pharetra sit amet diam nec gravida
+              </h1>
+              <p class="forum-beskrivelse">
+                Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+              </p>
+            </div>
+            <div class="traad-container">
+              <h1 class="traad-titel">
+                Morbi pharetra sit amet diam nec gravida
+              </h1>
+              <p class="forum-beskrivelse">
+                Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+              </p>
+            </div>
+            <div class="traad-container">
+              <h1 class="traad-titel">
+                Morbi pharetra sit amet diam nec gravida
+              </h1>
+              <p class="forum-beskrivelse">
+                Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+              </p>
+            </div>
+            <p class="forum-pagenumber">
+              <a href="#"><b>1</b> 2 3 4 5 6 ... 13»</a>
+            </p>
           </div>
         </div>
   </body>
