--- a/forum.html
+++ b/forum.html
@@ -34,15 +34,125 @@
      <div id="wrapper">
        <div class="col-1">
          <div class="forum-container">
-           hej
+           <a href="forum-dansk.html">
+             <h1 class="boks-titel">
+             Emrah
+            </h1>
+          </a>
+          <div class="traad-container">
+            <a href="forum-traad.html"><h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+          </a>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
          </div>
          <div class="forum-container">
+           <h1 class="boks-titel">
+             Kevin
+          </h1>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
          </div>
        </div>
        <div class="col-2">
          <div class="forum-container">
+           <h1 class="boks-titel">
+             Solveig
+          </h1>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
          </div>
          <div class="forum-container">
+           <h1 class="boks-titel">
+             Christina
+          </h1>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
+          <div class="traad-container">
+            <h1 class="traad-titel">
+              Morbi pharetra sit amet diam nec gravida
+            </h1>
+            <p class="forum-beskrivelse">
+              Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
+            </p>
+          </div>
          </div>
        </div>
      </div>
