--- a/opgaver-dansk.html
+++ b/opgaver-dansk.html
@@ -27,25 +27,26 @@
       <div id="header_container">
         <div id="header-cover">
           <h1 id="page-title">
-            Opgaver
+            Opgaver / Fag / Dansk
           </h1>
         </div>
     </header>
-     <div id="wrapper-opgaver">
-       <div id="opgaver-container">
-       <a href="opgaver-dansk.html" class="img-opgave1">Dansk</a>
-       <a href="#" class="img-opgave2">Opgave 2</a>
-       <a href="#" class="img-opgave3">Opgave 3</a>
-       <a href="#" class="img-opgave4">Opgave 4</a>
-       <a href="#" class="img-opgave5">Opgave 5</a>
-       <a href="#" class="img-opgave6">Opgave 6</a>
-       <a href="#" class="img-opgave7">Opgave 7</a>
-       <a href="#" class="img-opgave8">Opgave 8</a>
-       <a href="#" class="img-opgave9">Opgave 9</a>
-       <a href="#" class="img-opgave10">Opgave 10</a>
-       <a href="#" class="img-opgave11">Opgave 11</a>
-       <a href="#" class="img-opgave12">Opgave 12</a>
-     </div>
-     </div>
+    <div id="wrapper">
+      <div class="boks">
+        <h1 class="boks-titel">
+          Dansk
+        </h1>
+        <div class="row-1">
+        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="http://via.placeholder.com/450x250" class="img-margin">
+      </div>
+      <div class="row-2">
+        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="http://via.placeholder.com/450x250" class="img-margin">
+      </div>
+      </div>
+    </div>
   </body>
 </html>
