--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div id="container">
     <div class="section_container">
 
-      <div class="boks">
+      <div class="boks-person">
         <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
         <h2>Johanne Hansen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
@@ -67,7 +67,7 @@
         <p class="comment">Kommenter</p>
       </div>
 
-      <div class="boks justify-boks">
+      <div class="boks-person justify-boks">
         <img src="assets/images/mand1.png" alt="mand1" class="tilpas">
         <h2>Lars Andersen</h2>
         <p class="overskrift">Erfaring med kodning?</p>
@@ -75,7 +75,7 @@
         <p class="comment">Kommenter</p>
       </div>
 
-      <div class="boks">
+      <div class="boks-person">
         <img src="assets/images/mand2.png" alt="mand1" class="tilpas">
         <h2>Mathias Schmidt</h2>
         <p class="overskrift">SE HER!</p>
@@ -83,7 +83,7 @@
         <p class="comment">Kommenter</p>
       </div>
 
-      <div class="boks justify-boks">
+      <div class="boks-person justify-boks">
         <img src="assets/images/unknown.png" alt="mand1" class="tilpas">
         <h2>Emil Olufsen</h2>
         <p class="overskrift">Er jeg helt galt på den?</p>
@@ -91,7 +91,7 @@
         <p class="comment">Kommenter</p>
       </div>
 
-      <div class="boks">
+      <div class="boks-person">
         <img src="assets/images/dame2.png" alt="mand1" class="tilpas">
         <h2>Kathrine Mauritsen</h2>
         <p class="overskrift">Kursus i tyskland?</p>
@@ -99,7 +99,7 @@
         <p class="comment">Kommenter</p>
       </div>
 
-      <div class="boks justify-boks">
+      <div class="boks-person justify-boks">
         <img src="assets/images/mand3.png" alt="mand1" class="tilpas">
         <h2>Olav Iversen</h2>
         <p class="overskrift">God inspiration til matematik i 2. klasse?</p>
