--- a/materialer.html
+++ b/materialer.html
@@ -107,7 +107,7 @@
         <h1 class="boks-titel">
           Årsplaner
         </h1>
-        <p class="boks-beskrivelse_left">
+        <p class="boks-tekst_left">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
@@ -116,7 +116,7 @@
           Fysik<br />
           Matematik
         </p>
-        <p class="boks-beskrivelse_right">
+        <p class="boks-tekst_right">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
