Tilføjelse af mange undersider

--- a/materialer.html
+++ b/materialer.html
@@ -152,5 +152,23 @@
     </section>
     </div>
   </div>
+  <footer>
+    <div class="flex justify-center">
+      <div>
+        <h2>Support</h2>
+        <p>Tekst tekst tekst</p>
+      </div>
+      <div class="flytte">
+        <h2>Kontakt</h2>
+        <p>mere tekst tekst</p>
+      </div>
+    </div>
+    <div id="socialmedia">
+      <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.facebook.com/KUBORobot/" target="_blank" class="fa fa-facebook"></a>
+      <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
+    </div>
+  </footer>
   </body>
   </html>
