billeder på opgaver

--- a/opgaver-dansk.html
+++ b/opgaver-dansk.html
@@ -37,14 +37,14 @@
           Dansk
         </h1>
         <div class="row-1">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="assets/images/abc.opgaver.png" class="img-margin">
+        <img src="assets/images/bog.opgaver.png" class="img-margin">
+        <img src="assets/images/krydsord.opgaver.png" class="img-margin">
       </div>
       <div class="row-2">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="assets/images/retskrivning.opgaver.png" class="img-margin">
+        <img src="assets/images/medier.opgaver.png" class="img-margin">
+        <img src="assets/images/sandt.opgaver.png" class="img-margin">
       </div>
       </div>
     </div>
